...
            android:title="@string/popularity" />
        <item
            android:id="@+id/nav_now_playing"
            android:icon="@drawable/nav_now_playing_selector"
            android:title="@string/now_playing" />
        <item
            android:id="@+id/nav_top_rated"
            android:icon="@drawable/nav_top_rated_selector"
            android:title="@string/top_rated" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/nav_upcoming_selector"
            android:title="@string/upcoming" />
        <item
            android:id="@+id/nav_revenue"
...
